@startuml
class Patient{
# name : String
# id : int
# consultCost : int
+ calculateFinalCost ()
+ applyDeduction (percent : double)
+ applySurcharge (percent : double)
+ isExpensiveConsult ()
+ showData ()
}
class ParticularPatient{
}
class EPS_Patient {
- EPS_Name : String
+ calculateFinalCost ()
+ showData ()
}
class VIP_Patient {
- FidelityYears : int
+ calculateFinalCost ()
+ showData ()
}

Patient <|-- ParticularPatient
Patient <|-- EPS_Patient
Patient <|-- VIP_Patient

@enduml